syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bq.vertxgrpcexample.api.proto";
option java_outer_classname = "PersonProto";

package proto;

service PersonService {
    rpc CreatePerson (Person) returns (Person);
    rpc FetchPerson (FetchPersonRequest) returns (Person);
    rpc FetchAll (FetchAllRequest) returns (FetchAllResponse);
    rpc UpdatePerson (Person) returns (Person);
    rpc DeletePerson (Person) returns (DeleteResponse);
}

message Person {
    string id = 1;
    string name = 2;
    string lastName = 3;
    string email = 4;
    int32 age = 5;
}

message FetchPersonRequest {
    string id = 1;
}

message FetchAllRequest {
    int32 from = 1;
    int32 to = 2;
}

message FetchAllResponse {
    repeated Person people = 1;
}

message DeleteResponse {
    bool ok = 1;
}